--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -108,4 +108,8 @@
     .section__title {
         font-size: 2.3rem;
     }
+
+    .replace-insight h2{
+        font-size: 1.7rem !important;
+    }
 }
